# cmake_gpufit

./: .gitignore  CMakeLists.txt
gpufit/: CMakeLists.txt
gpufit/release/: Gpufit.lib
include/: main.h  run_gpufit.hpp
src/: CUDA_Interface_Example.cu  main.cpp  run_gpufit.cu
